# agent-forge

./: README.md  deploy.sh  pyproject.toml
agent_forge/: cli.py
agent_forge/templates/: __init__.py  docker-compose.yml  main.py
src/agent_forge/: __init__.py  cli.py
src/agent_forge/templates/: .env.example  README.md  agent.py  main.py  requirements.txt  test_agent.py
tests/: test_cli.py
