[project]
name = "agent-forge"
version = "0.1.0"
description = "Scaffold, deploy, and manage AI agents with one command"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
agent-forge = "agent_forge.cli:main"

[tool.hatch]
dependencies.paths = ["src/agent_forge"]

[tool.hatch.envs.default]
dependencies = [
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
